--- a/FRONTEND/app/index.html
+++ b/FRONTEND/app/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="A website to connect IT taks and talents"
+    />
+    <title>T4T</title>
   </head>
   <body>
     <div id="root"></div>
